# memory_memo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  mcp.json  production-checklist.md
backend/: Cargo.toml  quick_test.sh  test_integration.sh
backend/migrations/: 001_initial_schema.sql  002_sessions.sql
backend/src/: app.rs  database.rs  lib.rs  main.rs
backend/src/api/: auth.rs  memo.rs  middleware.rs  mod.rs
backend/src/models/: flush_memo.rs  forever_memo.rs  mod.rs  user.rs
backend/src/services/: auth.rs  cleanup.rs  memo.rs  mod.rs  session.rs
backend/tests/: auth_service_tests.rs  cleanup_service_tests.rs  contract_auth_tests.rs  contract_memo_tests.rs  e2e_test.rs  flush_memo_tests.rs  forever_memo_tests.rs  memo_service_tests.rs  user_tests.rs
docs/tasks/: memory-memo-tasks.md
frontend/: app.js  index.html  styles.css
memory/: constitution.md
scripts/: backup.sh  restore.sh
specs/001-web-2-1/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-web-2-1/contracts/: api-spec.yaml
