[[bin]]
name = "memory_memo"
path = "src/main.rs"

[package]
name = "memory_memo"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tower-cookies = "0.10"

[dev-dependencies]
tower = "0.4"
axum-test = "14.0"